tiddlers/$____my_styles_tile.css
div.tile {height: 8em; width: 6em; container-type: inline-size;}
div.tile div.element {width: 100cqw; height: 133cqw; border: 3.6cqw solid black; }
div.element {padding: 0; text-align: center; position: relative;}
div.element div.number {position: absolute; top: 5cqw; left: 5cqw; font-size: 20cqw;}
div.element div.mass   {position: absolute; top: 5cqw; right: 5cqw; font-size: 12cqw;}
div.element div.symbol {position: absolute; top: 41cqw; text-align: center; width: 100%; font-size: 50cqw;}
div.element div.name   {position: absolute; bottom: 5cqw; text-align: center; width: 100%; font-size: 12cqw;}
a:hover div.tile div.element {border-width: 6cqw}

.element.actinide             {background: #fc9;}
.element.alkali-metal         {background: #f9c;}
.element.alkaline-earth-metal {background: #9cf;}
.element.halogen              {background: #c9f;}
.element.lanthanide           {background: #f9f;}
.element.metal                {background: #9cc;}
.element.metalloid            {background: #ffc;}
.element.noble-gas            {background: #fcc}
.element.nonmetal             {background: #cff;}
.element.transactinide        {background: #f96;}
.element.transition-metal     {background: #cf9;}

